# felix

felix_enterprise/: ENTERPRISE_DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml
felix_enterprise/examples/: quick_start.py
felix_enterprise/src/felix_enterprise/: __init__.py  client.py  models.py
felix_enterprise/src/felix_enterprise/api/: main.py
felix_enterprise/src/felix_enterprise/hardware/: amd_rocm.py
hpc_tensor_demo/: 1_parallel_matrix_multiply.py  2_tensor_operations.py  3_mpi_example.py  4_openmp_simulation.py  5_advanced_tensor_ops.py  6_gpu_acceleration.py  7_distributed_computing.py  8_interactive_demo.py  9_benchmark_suite.py  README.md  demo_runner.sh  requirements.txt
