[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "felix-enterprise"
version = "1.0.0"
description = "Enterprise-grade hardware-aware deep learning optimization platform"
readme = "README.md"
license = {text = "Commercial"}
authors = [
    {name = "Felix Technologies Inc.", email = "support@felix-enterprise.com"}
]
maintainers = [
    {name = "Felix Technologies Inc.", email = "support@felix-enterprise.com"}
]
keywords = [
    "deep-learning",
    "optimization",
    "hardware-aware",
    "tensor-compiler",
    "enterprise",
    "amd",
    "cuda",
    "performance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
]
requires-python = ">=3.8"
dependencies = [
    # Core Felix dependencies
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "pytorch-lightning>=1.8.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    
    # Web framework and API
    "fastapi>=0.85.0",
    "uvicorn[standard]>=0.18.0",
    "pydantic>=1.10.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.8.0",
    
    # Authentication and security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.5",
    
    # Database
    "psycopg2-binary>=2.9.0",
    "redis>=4.3.0",
    
    # Monitoring and logging
    "prometheus-client>=0.14.0",
    "structlog>=22.1.0",
    "sentry-sdk>=1.9.0",
    
    # Configuration and deployment
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "rich>=12.5.0",
    
    # Data processing
    "pandas>=1.4.0",
    "pyarrow>=9.0.0",
    
    # Hardware integration
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
    
    # Async and concurrency
    "asyncio-mqtt>=0.11.0",
    "celery[redis]>=5.2.0",
    
    # Development and testing
    "pytest>=7.1.0",
    "pytest-asyncio>=0.19.0",
    "httpx>=0.23.0",
]

[project.optional-dependencies]
amd = [
    "torch-rocm>=1.12.0",
]
cuda = [
    "torch-cuda>=1.12.0",
    "nvidia-ml-py>=11.495.46",
]
dev = [
    "black>=22.6.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.971",
    "pre-commit>=2.20.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.8.0",
]
docs = [
    "sphinx>=5.1.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]

[project.urls]
Homepage = "https://felix-enterprise.com"
Documentation = "https://docs.felix-enterprise.com"
Repository = "https://github.com/felix-technologies/felix-enterprise"
"Bug Tracker" = "https://github.com/felix-technologies/felix-enterprise/issues"
Changelog = "https://github.com/felix-technologies/felix-enterprise/blob/main/CHANGELOG.md"

[project.scripts]
felix-enterprise = "felix_enterprise.cli:main"
felix-server = "felix_enterprise.server:main"
felix-worker = "felix_enterprise.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["felix_enterprise"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]